--- a/fale-conosco.html
+++ b/fale-conosco.html
@@ -1,47 +1,86 @@
-Google Glass
-A revolução do Google está chegando
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="_css/estilo.css">
+    <title>Saiba tudo sobre o Google Glass</title>
+</head>
+<body>
+    <div id="interface">
+        <header id="cabecalho">
+            <hgroup> </hgroup>
+            <h1><em>Google Glass</em>
+            </h1>
+            <h2>A revolução do Google está chegando</h2>
+            <img src="_imagens/glass-logo-peq.jpg" >
 
-[AQUI ENTRA UMA FOTO]
+            <img id="icone" src="_imagens/contato.png">
 
-Menu Principal
-- Home
-- Especificações
-- Fotos
-- Multimídia
-- Fale conosco
+            <nav id="menu">
+                <h2>Menu Principal</h2>
 
-Fale Conosco > Contato
-Formulário de Contato
-por Gustavo Guanabara
-Atualizado em 01/Maio/2013
+                <ul >
+                    <li>
+                        <a href="index.html">Home</a>
+                    </li>
 
-Identificação do Usuário
-    Nome:
-    Senha:
-    E-mail:
-    Sexo:
-        - Masculino
-        - Feminino
-    Data de Nascimento:
+                    <li>
+                        <a href="specs.html"> Especificações </a>
+                    </li>
 
-Endereço do Usuário
-    Logradouro:
-    Número:
-    Estado:
-    Cidade:
+                    <li>
+                        <a href="fotos.html">Fotos</a>
+                    </li>
 
-Mensagem do Usuário
-    Grau de Urgência:
-    Mensagem:
+                    <li>
+                        <a href="multimidia.html">Multimídia</a>
+                    </li>
 
-Quero um Google Glass
-    Gostaria de adquirir um Google Glass quando disponível
-    Cor:
-    Quantidade:
-    Preço Total: R$
+                    <li>
+                        <a href="fale-conosco.html"> Fale conosco</a>
+                    </li>
+                </ul>
+            </nav>
+        </header>
+        <hgroup>
+            <h3>Fale Conosco > Contato</h3>
+            <h1>Formulário de Contato</h1>
+            <h2>por Leo/Thiago</h2>
+            <h3>Atualizado em 01/Maio/2013</h3>
+        </hgroup>
+
+        Identificação do Usuário
+            Nome:
+            Senha:
+            E-mail:
+            Sexo:
+                - Masculino
+                - Feminino
+            Data de Nascimento:
+
+        Endereço do Usuário
+            Logradouro:
+            Número:
+            Estado:
+            Cidade:
+
+        Mensagem do Usuário
+            Grau de Urgência:
+            Mensagem:
+
+        Quero um Google Glass
+            Gostaria de adquirir um Google Glass quando disponível
+            Cor:
+            Quantidade:
+            Preço Total: R$
 
 
-[BOTÃO ENVIAR]
+        [BOTÃO ENVIAR]
 
-Copyright 2013 - by Gustavo Guanabara
-Facebook | Twitter
+        <p>Copyright &copy; 2013 - by Leo</p>
+        <p>Facebook | Twitter</p>
+    </div>
+</body>
+</html>
