--- a/index.html
+++ b/index.html
@@ -14,15 +14,16 @@
             <h1><em>Google Glass</em>
             </h1>
             <h2>A revolução do Google está chegando</h2>
+            <img src="_imagens/glass-logo-peq.jpg" >
 
-            <img src="_imagens/glass-oculos-preto-peq.png">
+            <img id="icone" src="_imagens/glass-oculos-preto-peq.png">
 
-            <nav>
+            <nav id="menu">
                 <h2>Menu Principal</h2>
 
                 <ul >
                     <li>
-                        <a href="index.html"> Home</a>
+                        <a href="index.html">Home</a>
                     </li>
 
                     <li>
@@ -90,9 +91,8 @@
 
         <p>Além da surpresa do áudio, a tela montada a frente do olho do usuário também chamou atenção. Serão 640 x 360 pixels de resolução que, em proporção, equivaleria a um monitor de 25 polegadas de alta definição colocado a 2,5 metros de distância do espectador.</p>
 
-        Copyright &copy; 2013 - by Leo
-        Facebook | Twitter
+        <p>Copyright &copy; 2013 - by Leo</p>
+        <p>Facebook | Twitter</p>
     </div>
 </body>
 </html>
-
