--- a/fotos.html
+++ b/fotos.html
@@ -1,29 +1,67 @@
-Google Glass
-A revolução do Google está chegando
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="_css/estilo.css">
+    <title>Saiba tudo sobre o Google Glass</title>
+</head>
+<body>
+    <div id="interface">
+        <header id="cabecalho">
+            <hgroup> </hgroup>
+            <h1><em>Google Glass</em>
+            </h1>
+            <h2>A revolução do Google está chegando</h2>
+            <img src="_imagens/glass-logo-peq.jpg" >
 
-[AQUI ENTRA UMA FOTO]
+            <img id="icone" src="_imagens/fotos.png">
 
-Menu Principal
-- Home
-- Especificações
-- Fotos
-- Multimídia
-- Fale conosco
+            <nav id="menu">
+                <h2>Menu Principal</h2>
 
-Glass > Fotos
-Galeria de Imagens do Google Glass
-por Gustavo Guanabara
-Atualizado em 01/Maio/2013
+                <ul >
+                    <li>
+                        <a href="index.html">Home</a>
+                    </li>
 
-Veja na nossa galeria de fotos várias belas imagens que mostram algumas das principais características do Google Glass, como recursos e propriedades que estão impressionando o mundo inteiro. Basta passar o mouse sobre uma das fotos para ver uma versão ampliada e com uma breve descrição.
+                    <li>
+                        <a href="specs.html"> Especificações </a>
+                    </li>
 
-- Agenda e lembretes
-- Sergey Brin usando o Glass
-- Leve e compacto
-- Sensação de uma tela de 50"
-- Vários tipos de lente
-- Informações importantes
+                    <li>
+                        <a href="fotos.html">Fotos</a>
+                    </li>
 
-Copyright 2013 - by Gustavo Guanabara
+                    <li>
+                        <a href="multimidia.html">Multimídia</a>
+                    </li>
 
-Facebook | Twitter
+                    <li>
+                        <a href="fale-conosco.html"> Fale conosco</a>
+                    </li>
+                </ul>
+            </nav>
+        </header>
+        <hgroup>
+            <h3>Glass > Fotos</h3>
+            <h1>Galeria de Imagens do <em>Google Glass</em></h1>
+            <h2>por Leo/Thiago</h2>
+            <h3>Atualizado em 01/Maio/2013</h3>
+        </hgroup>
+
+        Veja na nossa galeria de fotos várias belas imagens que mostram algumas das principais características do Google Glass, como recursos e propriedades que estão impressionando o mundo inteiro. Basta passar o mouse sobre uma das fotos para ver uma versão ampliada e com uma breve descrição.
+
+        - Agenda e lembretes
+        - Sergey Brin usando o Glass
+        - Leve e compacto
+        - Sensação de uma tela de 50"
+        - Vários tipos de lente
+        - Informações importantes
+
+        <p>Copyright &copy; 2013 - by Leo</p>
+        <p>Facebook | Twitter</p>
+    </div>
+</body>
+</html>
