--- a/multimidia.html
+++ b/multimidia.html
@@ -1,25 +1,64 @@
-Google Glass
-A revolução do Google está chegando
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="_css/estilo.css">
+    <title>Saiba tudo sobre o Google Glass</title>
+</head>
+<body>
+    <div id="interface">
+        <header id="cabecalho">
+            <hgroup> </hgroup>
+            <h1><em>Google Glass</em>
+            </h1>
+            <h2>A revolução do Google está chegando</h2>
+            <img src="_imagens/glass-logo-peq.jpg" >
 
-[AQUI ENTRA UMA FOTO]
+            <img id="icone" src="_imagens/multimidia.png">
 
-Menu Principal
-- Home
-- Especificações
-- Fotos
-- Multimídia
-- Fale conosco
+            <nav id="menu">
+                <h2>Menu Principal</h2>
 
-Glass > Multimídia
-Sons e Vídeos
-por Gustavo Guanabara
-Atualizado em 01/Maio/2013
+                <ul >
+                    <li>
+                        <a href="index.html">Home</a>
+                    </li>
+
+                    <li>
+                        <a href="specs.html"> Especificações </a>
+                    </li>
+
+                    <li>
+                        <a href="fotos.html">Fotos</a>
+                    </li>
+
+                    <li>
+                        <a href="multimidia.html">Multimídia</a>
+                    </li>
+
+                    <li>
+                        <a href="fale-conosco.html"> Fale conosco</a>
+                    </li>
+                </ul>
+            </nav>
+        </header>
+        <hgroup>
+            <h3>Glass > Multimídia</h3>
+            <h1>Sons e Vídeos</h1>
+            <h2>por Leo/Thiago</h2>
+            <h3>Atualizado em 01/Maio/2013</h3>
+        </hgroup>
 
 
-Áudio e Vídeo
+        <h2>Áudio e Vídeo</h2>
 
-[AQUI ENTRA UM VÍDEO]
-[AQUI ENTRA UM ÁUDIO]
+        [AQUI ENTRA UM VÍDEO]
+        [AQUI ENTRA UM ÁUDIO]
 
-Copyright 2013 - by Gustavo Guanabara
-Facebook | Twitter
+        <p>Copyright &copy; 2013 - by Leo</p>
+        <p>Facebook | Twitter</p>
+    </div>
+</body>
+</html>
