--- a/specs.html
+++ b/specs.html
@@ -1,23 +1,61 @@
-Google Glass
-A revolução do Google está chegando
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="_css/estilo.css">
+    <title>Saiba tudo sobre o Google Glass</title>
+</head>
+<body>
+    <div id="interface">
+        <header id="cabecalho">
+            <hgroup> </hgroup>
+            <h1><em>Google Glass</em>
+            </h1>
+            <h2>A revolução do Google está chegando</h2>
+            <img src="_imagens/glass-logo-peq.jpg" >
 
-[AQUI ENTRA UMA FOTO]
+            <img id="icone" src="_imagens/especificacoes.png">
 
-Menu Principal
-- Home
-- Especificações
-- Fotos
-- Multimídia
-- Fale conosco
+            <nav id="menu">
+                <h2>Menu Principal</h2>
 
-Glass > Especificações
-Raio-X no Google Glass
-por Gustavo Guanabara
-Atualizado em 01/Maio/2013
+                <ul >
+                    <li>
+                        <a href="index.html">Home</a>
+                    </li>
 
-Clique em qualquer área destacada da imagem para ter mais informações sobre os recursos do Google Glass. Qualquer ponto vermelho vai te levar a um lugar cheio de novas informações.
+                    <li>
+                        <a href="specs.html"> Especificações </a>
+                    </li>
 
-[AQUI ENTRA UMA IMAGEM]
+                    <li>
+                        <a href="fotos.html">Fotos</a>
+                    </li>
 
-Copyright 2013 - by Gustavo Guanabara<
-Facebook | Twitter
+                    <li>
+                        <a href="multimidia.html">Multimídia</a>
+                    </li>
+
+                    <li>
+                        <a href="fale-conosco.html"> Fale conosco</a>
+                    </li>
+                </ul>
+            </nav>
+        </header>
+
+        Glass > Especificações
+        Raio-X no Google Glass
+        por Leo/Thiago
+        Atualizado em 01/Maio/2013
+
+        Clique em qualquer área destacada da imagem para ter mais informações sobre os recursos do Google Glass. Qualquer ponto vermelho vai te levar a um lugar cheio de novas informações.
+
+        <img src="_imagens/glass-esquema-marcado.jpg">
+
+        <p>Copyright &copy; 2013 - by Leo</p>
+        <p>Facebook | Twitter</p>
+    </div>
+</body>
+</html>
